--- a/css/main.css
+++ b/css/main.css
@@ -22,9 +22,31 @@ body {
     box-shadow: 0px 2px 5px 0px #391C73;
 
 }
+.purplestrip h1 {
+    position: relative;
+    top: -130px;
+    left: 150px;
+    font-size: 30px;
+}
+.purplestrip h2 {
+    position: relative;
+    font-size: 20px;
+    top: -150px;
+    left: 150px;
+}
+#w-Logo img {
+    position: relative;
+    top: -20px;
+    width: 150px;
+}
 
 
-
+body h1 {
+    color: white;
+}
+#slide {
+    width: 100%;
+}
 article {
     background-color: white;
     color: black;
