--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
 
 
 body {
+
     background-image: url('http://i.imgur.com/4mJ1rf2.jpg');
     background-size: cover;
     background-repeat: no-repeat;
@@ -40,12 +41,14 @@ body {
     width: 150px;
 }
 
-
-body h1 {
-    color: white;
-}
 #slide {
-    width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto; 
+    object-fit: none; /* Do not scale the image */
+    object-position: center; /* Center the image within the element */
+    height: 300px;
+    width: 100%
 }
 article {
     background-color: white;
@@ -58,10 +61,17 @@ article {
 }
 
 main {
+    margin-right: 16%;
+    margin-left: 16%;
     padding: 1em;
+    background-color: rgba(255,255,255,.9);
 }
 
-
+body h1 {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 header h1 {
     font-size: 45px;
 }
