--- a/About Us/css/aboutus.css
+++ b/About Us/css/aboutus.css
@@ -1,6 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300);
-
-
+/*@import url(http://fonts.googleapis.com/css?family=Open+Sans:300);
 
 body {
     background-image: url('http://i.imgur.com/4mJ1rf2.jpg');
@@ -19,7 +17,6 @@ header {
     border-bottom: 5px;
     border-bottom-color: #391C73;
     border-bottom-style: solid;
-    /*box-shadow: 0px 0px 10px 0px #391C73;*/
 
 }
 
@@ -55,8 +52,10 @@ footer {
     padding-bottom: 60px;
 }
 
+*/
 
 /* for the nav bar */
+/*
 #nav {
     background-color: #E9E9E9;
 }
@@ -117,3 +116,4 @@ footer {
     border-top-color: #391C73;
     border-top-style: solid; 
 }
+*/
